fixed a bug thatn moved the lower buttons when ability description was too long. Added responsive css file

--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,16 @@ body {
     box-shadow: 0 5px 10px rgba(0,0,0, 0.2);
 }
 
+.image {
+    transform-style: preserve-3d;
+    /*margin: 0 auto 0 auto;*/
+    display: flex;
+    justify-content: center;
+    max-height: 25rem;
+    height: 100%;
+    position: relative;
+}
+
 .circle{
     width: 25rem;
     height: 25rem;
@@ -82,16 +92,6 @@ body {
     position: absolute;
     z-index: 1;
     border-radius: 25rem;
-}
-
-.image {
-    transform-style: preserve-3d;
-    margin: 0 auto 0 auto;
-    display: flex;
-    justify-content: center;
-    max-height: 24.1rem;
-    height: 100%;
-    position: relative;
 }
 
 .img {
@@ -129,6 +129,8 @@ body {
     margin-top: 2rem;
     font-size: 1.4rem;
     transition: all 0.75s ease-out;
+    height: 3.5rem;
+
 }
 
 .bottom {
